# launchpad

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  file-issues.md  git-issues.md  index.html  multi_agent_overview.md  package-lock.json  package.json  roadmap.md  textedit_update.md  vitest.config.js
.github/workflows/: release.yml  test.yml
audits/: editor-visual-verification-2026-06-17.md  file-pane-audit-2026-05-08.md  foundation-audit-2026-05-07.md
crates/core/: default_base_instructions.txt  models.json
crates/core/src/: model_catalog.rs  provider_presets.rs  session.rs
crates/protocol/src/: session.rs
crates/safety/src/: legacy_permissions.rs
crates/server/src/: execution.rs  projection.rs  runtime.rs
crates/tools/src/: orchestrator.rs
docs/: architecture.html  features.html  getting-started.html  index.html  macos-signing.md  shortcuts.html
docs/assets/: style.css
scripts/: build-signed.sh  bump-version.sh
specs/: agent-inline-edit-spec.md  agent-integration-spec.md  agent-spec.md  editor-spec.md  foundation-audit-spec.md  git-features-implementation-plan.md  git-features-plan.md  project-model-spec.md
specs/archive/: project-model-spec.md
src/: agentchat.js  agentcomposer.js  agentmsg.js  agentpanel.js  blamegutter.js  blamegutter.test.js  changegutter.js  changegutter.test.js  conflictmarkers.js  conflictmarkers.test.js  debugcapture.js  diffparse.js  diffrender.js  diffrender.test.js  difftab.js  domutil.js  editor.js  editorchrome.js  editortab.js  events.js  filebrowser.js  filesettings.js  git.js  gitpanel.js  keymap.js  lspclient.js  main.js  mergetab.js  projectpicker.js  projects.js  projectsearch.js  providers.js  quickopen.js  rebasetab.js  settings.js  settingspanel.js  styles.css  symbolpalette.js  symbols.js  symbols.test.js  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs.rs  git.rs  lib.rs  lsp.rs  project_env.rs  projects.rs  pty.rs  settings.rs  tests.rs  watcher.rs  windows.rs
src-tauri/src/agent/: commands.rs  config.rs  host.rs  mod.rs  native_tools.rs  protected_paths.rs
src-tauri/src/git/: blame.rs  branches.rs  cherrypick.rs  commits.rs  common.rs  conflicts.rs  diff.rs  mod.rs  network.rs  pending.rs  rebase.rs  staging.rs  stash.rs  status.rs
src-tauri/starter-skills/commit/: SKILL.md
src-tauri/starter-skills/explain/: SKILL.md
src-tauri/starter-skills/plan/: SKILL.md
src-tauri/starter-skills/review/: SKILL.md
(+4 files in other folders)
