[package]
name = "launchpad"
version = "0.1.1"
edition = "2021"

[lib]
name = "launchpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
notify-debouncer-mini = "0.5"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
