[package]
name = "launchpad"
version = "0.3.0"
edition = "2021"

[lib]
name = "launchpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
notify-debouncer-mini = "0.5"
urlencoding = "2"
regex = "1"
tempfile = "3"

# Agent runtime (ported from launchpad-agent)
lpa-core = { workspace = true }
lpa-protocol = { workspace = true }
lpa-server = { workspace = true }
lpa-provider = { workspace = true }
lpa-tools = { workspace = true }
lpa-safety = { workspace = true }
lpa-mcp = { workspace = true }
lpa-utils = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
