[package]
name = "launchpad"
version = "0.3.2"
edition = "2021"

[lib]
name = "launchpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features = false drops libgit2's ssh/https transports (and with them the
# libssh2-sys + openssl-sys deps that dynamically link Homebrew's libssl/libcrypto).
# All network git ops shell out to system `git`; libgit2 is used for local ops only,
# so no transport backend is needed. Keeps the binary self-contained + notarizable.
git2 = { version = "0.19", default-features = false }
notify-debouncer-mini = "0.5"
urlencoding = "2"
regex = "1"
tempfile = "3"

[dev-dependencies]
